tests/NormalTests/paczka1/small_fuzzy/85208568.err
Error in line 4: S241 S168 12,0
Error in line 5: 9iPTw S255 87,2
Error in line 8: 9iPTw S709 75,0
